# DNA_Insights_V1

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  MEMORY.md  README.md  ROADMAP.md  pyproject.toml
.claude/: settings.json
.claude/agents/: README.md  architect-reviewer.md  comment-analyzer.md  completeness-critic.md  convention-compliance.md  deep-debugger.md  fan-out-implementer.md  finding-verifier.md  green-keeper.md  handoff-assembler.md  implementer.md  knowledge-curator.md  phi-pii-guardian.md  plan-adherence-sentinel.md  plan-auditor.md  plan-judges.md  plan-premortem.md  plan-synthesizer.md  planner.md  pr-test-analyzer.md  regression-hunter.md  repo-sweep.md  review-synthesizer.md  schema-change-executor.md  scope-dispatcher.md  silent-failure-hunter.md  test-author.md  test-integrity.md  test-triage.md  tmp-janitor.md  type-design-analyzer.md
.claude/commands/: campaign-run.md  campaign.md  changelog.md  fast-follow.md  handoff.md  new-finding.md  pr-ready.md  scope-run.md  scope-split.md  verify-and-merge.md
.claude/hooks/: block-git-add-all.sh  block-schema-edit.sh  nudge-changelog.sh  warn-gate-fill.sh
.claude/workflows/: close.js  implement-review.js  plan-phase.js
.github/workflows/: docs-gate.yml  roadmap-gate.yml  workflows-gate.yml
backend/tests/: _calibration_ledger.py  conftest.py  test_align_tier3.py  test_annotate_cli.py  test_annotate_downloads.py  test_annotate_index_refresh.py  test_annotate_loader_gwas_catalog.py  test_annotate_loader_pgs_catalog.py  test_annotate_loaders_clinvar.py  test_annotate_loaders_cpic.py  test_annotate_loaders_pharmgkb.py  test_annotate_purge.py  test_annotate_registry.py  test_annotate_seed_genes.py  test_annotate_source_versions.py  test_annotate_supersession.py  test_calibration_accuracy.py  test_calibration_asymmetry.py  test_calibration_backtest_nonvacuous.py  test_calibration_cli.py  test_calibration_commit_plan.py  test_calibration_compute_tier.py  test_calibration_coverage_park.py  test_calibration_direction_from_deltas.py  test_calibration_doc_consistency.py  test_calibration_enablement.py  test_calibration_floors_immutable.py  test_calibration_formatter.py  test_calibration_loop_closure.py  test_calibration_loop_closure_doc.py  (+99 more)
ddl/: alters_cross_group.sql  group_1_genotype.sql  group_2_annotations.sql  group_3_derived.sql  group_4_insights.sql  group_5_app_state.sql
docs/: consensus.md
scripts/: diag_canonicalize.py  install-hooks.sh  verify.sh
(+216 files in other folders)
