[project]
name = "genome"
version = "0.1.0"
description = "Local-first DNA insights application"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Proprietary" }

dependencies = [
    "duckdb>=1.1.0",
    "pyarrow>=17.0.0",
    "pysqlcipher3>=1.2.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "typer>=0.13.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "structlog>=24.4.0",
    "python-dotenv>=1.0.1",
    "cyvcf2>=0.31.0",
    "anthropic>=0.40.0",
    "httpx>=0.27.0",
    "liftover>=1.4.0",
    "pyliftover>=0.4.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]

[project.scripts]
genome = "genome.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["backend/src/genome"]

[tool.hatch.build.targets.sdist]
include = ["backend/src/genome", "ddl", "README.md", "pyproject.toml"]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
pythonpath = ["backend/src"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["backend/src/genome"]
branch = true

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["backend/src", "backend/tests"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D",      # pydocstyle — not enforcing docstrings
    "COM812", # trailing comma; conflicts with formatter
    "ISC001", # implicit string concat; conflicts with formatter
]

[tool.ruff.lint.per-file-ignores]
"backend/tests/**" = [
    "S101",   # assert is fine in tests
    "PLR2004",# magic numbers in tests
    "ANN",    # don't require type annotations in tests
    "INP001", # tests don't need __init__.py
    "S105",   # test passphrase fixtures are not real secrets
    "S106",   # passwords in tests are fixtures
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "backend/src"
namespace_packages = true
explicit_package_bases = true
files = ["backend/src/genome"]

[[tool.mypy.overrides]]
module = [
    "pysqlcipher3.*",
    "cyvcf2.*",
    "duckdb.*",
    "liftover.*",
    "pyliftover.*",
    "pyarrow.*",
]
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
]
